[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Res/font1-16.tres" type="DynamicFont" id=1]
[ext_resource path="res://UIToolKit/QuakeStyleWindow/QuakeStyleWindow.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 0.933333 )
border_blend = true
corner_detail = 10
shadow_color = Color( 0, 0, 0, 0.54902 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.278431, 0.278431, 0.278431, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 5
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.160784, 0.160784, 0.160784, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 5
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 5
shadow_size = 1

[node name="QuakeStyleWindow" type="Panel"]
anchor_right = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
is_closed = false

[node name="Tween" type="Tween" parent="."]

[node name="Content" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideShow" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -13.0
margin_right = 95.0
margin_bottom = 13.0
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="HideShow" to="." method="_on_HideShow_pressed"]
